jump to preq on register done, updates, bug fixes

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -360,10 +360,6 @@ form .ant-input-number {
   overflow-y: auto;
 }
 
-.dashboard-notif {
-  font-size: 16px;
-}
-
 .ant-tag {
   margin-bottom: 8px;
 }
